# Project1-AI_Base_Emergency_Voice_Detection_System

./: .env  .gitignore  PROJECT_SPEC.md  QUICK_TEST.md  README.md  SETUP_GUIDE.md  TESTING_CHECKLIST.md  TESTING_FLOW.md  add_dataset.py  app.py  dashboard.html  devide.html  distance.py  find_file.py  history.html  index.html  login.html  prepare_negative.py  prepare_positive.py  prepare_test.py  register.html  requirements.txt  scan_audio.py  script.js  setting.html  style.css  test.py  train.py
backend/: .env  .gitignore  README.md  check_db.js  db.js  detect.py  line_notify.js  mqtt-broker.js  package-lock.json  package.json  server.js  test_api.js  test_output.txt  wav_utils.js
backend/ai/: detect.py
backend/config/: db.js
backend/database/: smart_voice_alert.sql
backend/middleware/: auth.js
backend/routes/: alerts.js  auth.js  devices.js  events.js  patients.js
backend/services/: aiService.js  audioQueue.js  lineNotify.js  mqttClient.js
backend/test/: publish_test_audio.js
backend_ai/: .gitignore  README_AI.md  inference.py  prepare_dataset.py  requirements.txt  train.py  utils.py
connect/: CMakeLists.txt
connect/main/: connect.c  (+1 more)
esp32/: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
esp32/main/: CMakeLists.txt  voice_recorder.c
front_test/: dashboard.html  devide.html  style.css
guardian-ai-web/: package-lock.json  package.json
my-awesome-app/: .gitignore  package-lock.json  package.json
static/: dashboard.html  history.html  script.js  setting.html
ิbackend_ai/: add_dataset.py  app.py  train_model.py  voice_model.pkl
(+31 files in other folders)
